alteração de link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-shopping-cart",
-  "homepage": "https://br-adriel.github.io/react-shopping-cart/",
+  "homepage": "https://github.com/Gleidson-Fokuro/vitrine-ecomerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
